[package]
name = "uart"
version = "0.1.0"
authors = ["canxin <1969730106@qq.com>"]
edition = "2021"

[dependencies]
cortex-m-rt = "0.7.1"
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
stm32h7xx-hal = { version = "0.14.0", features = ["stm32h743v"] }
defmt = "0.3.1"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

[profile.dev]
debug = true

[profile.release]
debug = true
lto = true
opt-level = "s"
